Stylesheet/emote/tag updates 2013-04-05

--- a/source-css/beautybrass.css
+++ b/source-css/beautybrass.css
@@ -41,3 +41,64 @@ a[href|="/couchflip"]
     width: 217px;
     height: 118px;
 }
+
+a[href|="/runnybrass"]
+{
+ 
+ background-image: url(%%122354--UNOPT--safe-animated-sprite-desktop-ponies-beauty-brass%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    width: 106px;
+    height: 96px;
+}
+a[href|="/brasswoah"]
+{
+ 
+ background-image: url(%%breakfast-themostimportantmealoftheday%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    width: 163px;
+    height: 171px;
+}
+a[href|="/breakfast-themostimportantmealoftheday"]
+{
+ 
+ background-image: url(%%breakfast-themostimportantmealoftheday%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    width: 163px;
+    height: 171px;
+}
+a[href|="/brassheart"]
+{
+ 
+ background-image: url(%%e%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    width: 124px;
+    height: 201px;
+}
+a[href|="/brassultry"]
+{
+ 
+ background-image: url(%%futbol%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    width: 111px;
+    height: 130px;
+}
+a[href|="/geometry"]
+{
+ 
+ background-image: url(%%geometry%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    width: 133px;
+    height: 170px;
+}
