--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -367,13 +367,13 @@ a[href|="/plotseverywhere"]{ background-position: 0 -1937px; width: 180px; heigh
 a[href|="/psychoshy"]{ background-position: -250px 0; width: 98px; height: 150px;}
 a[href|="/psychoshy"]:hover{background-position: -250px -200px; width: 98px; height: 150px;}
 
-a[href|="/lpmintals"], a[href|="/redeye"], a[href|="/vrcrazy"], a[href|="/mglory"], a[href|="/hiredgun"], a[href|="/bjwindow"], a[href|="/calamityspooky"], a[href|="/murkyinsecure"], a[href|="/bjinabowl"], a[href|="/tapdancingbj"], a[href|="/bjbored"], a[href|="/lpgdi"], a[href|="/bjmanic"], a[href|="/twiseal"], a[href|="/murkyfaint"], a[href|="/princessbj"], a[href|="/glimmerhug"], a[href|="/boo"]
+a[href|="/lpmintals"], a[href|="/redeye"], a[href|="/vrcrazy"], a[href|="/mglory"], a[href|="/hiredgun"], a[href|="/bjwindow"], a[href|="/calamityspooky"], a[href|="/murkyinsecure"], a[href|="/bjinabowl"], a[href|="/tapdancingbj"], a[href|="/bjbored"], a[href|="/lpgdi"], a[href|="/bjmanic"], a[href|="/twiseal"], a[href|="/murkyfaint"], a[href|="/princessbj"], a[href|="/glimmerhug"], a[href|="/boo"], a[href|="/lplie"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em5-v31%%);
+background-image: url(%%foe-em5-v32%%);
 }
 a[href|="/bjbored"]{background-position: 0 0; width: 70px; height: 70px; }
 a[href|="/bjinabowl"]{ background-position: 0 -120px; width: 73px; height: 70px; }
@@ -393,6 +393,7 @@ a[href|="/redeye"]{ background-position: -240px -200px; width: 66px; height: 100
 a[href|="/tapdancingbj"]{ background-position: -240px -350px; width: 127px; height: 150px; }
 a[href|="/twiseal"]{ background-position: -240px -550px; width: 133px; height: 150px; }
 a[href|="/vrcrazy"]{background-position: -240px -750px; width: 70px; height: 70px; } 
+a[href|="/lplie"]{background-position: -240px -870px; width: 100px; height: 100px; }
 
 
 a[href|="/advicebj"]
