--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -962,6 +962,13 @@ a[href|="/racist"],
 a[href|="/fools"],
 a[href|="/excalibur"],
 a[href|="/foals"],
+a[href|="/becauseyouwubyourselfatnight"],
+a[href|="/scootapuppyeyes"],
+a[href|="/anythingicandotohelp"],
+a[href|="/dropthebass"],
+a[href|="/fsforyou"],
+a[href|="/applebloomaruu"],
+a[href|="/abhai"],
 a[href|="/mwno"]
 {
     display: block;
@@ -1028,18 +1035,45 @@ a[href|="/foals"]
     width: 134px;
     background-position: -197px -560px;
 }
-
-a[href|="/mwno"]
+a[href|="/becauseyouwubyourselfatnight"]
 {
-    width: 110px;
+    width: 255px;
+    background-position: -0px -700px;
+}
+a[href|="/scootapuppyeyes"]
+{
+    width: 98px;
+    background-position: -255px -700px;
+}
+a[href|="/anythingicandotohelp"]
+{
+    width: 267px;
+    background-position: -0px -840px;
+}
+a[href|="/dropthebass"]
+{
+    width: 167px;
+    background-position: -0px -980px;
+}
+a[href|="/fsforyou"]
+{
+    width: 184px;
+    background-position: -0px -1120px;
+}
+a[href|="/applebloomaruu"],
+a[href|="/abhai"]
+{
+    width: 153px;
 	height: 200px;
-    background-position: -0px -1400px;
+    background-position: -110px -1400px;
 }
 /* end sheet 7 */
 
 /* sheet 8 */
 a[href|="/rapingtime"],
-a[href|="/awkwardhug"]
+a[href|="/awkwardhug"],
+a[href|="/fscry"],
+a[href|="/feels"]
 {
     display: block;
     clear: none;
@@ -1062,4 +1096,106 @@ a[href|="/awkwardhug"]
 	width: 150px;
 	background-position: -224px -0px;
 }
+a[href|="/fscry"],
+a[href|="/feels"]
+{
+	width: 145px;
+	background-position: -374px -0px;
+}
 /* end sheet 8 */
+
+/* sheet 9 */
+a[href|="/wheels"],
+a[href|="/vymedic"],
+a[href|="/applejackson"],
+a[href|="/teibounce"],
+a[href|="/fiddlesticks"],
+a[href|="/teipixelbuster"],
+a[href|="/ajistiredofyourshit"],
+a[href|="/bpdemo"],
+a[href|="/redtoxindash"],
+a[href|="/pillshere"],
+a[href|="/corndogarmor"],
+a[href|="/enemyatthegates"],
+a[href|="/ponymead"],
+a[href|="/smuglestia"],
+a[href|="/ridinintothedangerzone"],
+a[href|="/bpsalute"]
+{
+    display: block;
+    clear: none;
+    float: left;
+    height: 140px;
+    background-image: url(%%sheet9%%)
+}
+a[href|="/wheels"]
+{
+	width: 175px;
+	background-position: -0px -0px;
+}
+a[href|="/applejackson"]
+{
+	width: 89px;
+	background-position: -0px -140px;
+}
+a[href|="/teibounce"]
+{
+	width: 147px;
+	background-position: -89px -140px;
+}
+a[href|="/fiddlesticks"]
+{
+	width: 110px;
+	background-position: -236px -140px;
+}
+a[href|="/teipixelbuster"]
+{
+	width: 187px;
+	background-position: -0px -280px;
+}
+a[href|="/bpdemo"]
+{
+	width: 249px;
+	background-position: -0px -420px;
+}
+a[href|="/redtoxindash"]
+{
+	width: 122px;
+	background-position: -255px -420px;
+}
+a[href|="/pillshere"]
+{
+	width: 177px;
+	background-position: -0px -560px;
+}
+a[href|="/corndogarmor"]
+{
+	width: 115px;
+	background-position: -177px -560px;
+}
+a[href|="/enemyatthegates"]
+{
+	width: 260px;
+	background-position: -0px -700px;
+}
+a[href|="/ponymead"]
+{
+	width: 164px;
+	background-position: -0px -840px;
+}
+a[href|="/smuglestia"]
+{
+	width: 131px;
+	background-position: -164px -840px;
+}
+a[href|="/ridinintothedangerzone"]
+{
+	width: 125px;
+	background-position: -0px -980px;
+}
+a[href|="/bpsalute"]
+{
+	width: 187px;
+	background-position: -125px -980px;
+}
+/* end sheet 9 */
