--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -119,8 +119,8 @@ a[href|="/sp"] + .reddit_show_hidden_emotes_span{display:none}
 
 a[href^="/"][href*="-in-"],a[href^="/"][href$="-in"],a[href^="/"][href*="-inp-"],a[href^="/"][href$="-inp"]{float:none!important;display: inline-block!important}
 
-a[href="/spoiler"]{background:black!important;color:black!important}
-a[href="/spoiler"]:hover{color:white!important}/* Spoiler Setter*/
+body a[href="/spoiler"]{background:black!important;color:black!important}
+body a[href="/spoiler"]:hover{color:white!important}/* Spoiler Setter*/
 .marknsfw-button a[href="#"], .unmarknsfw-button a[href="#"]
 {
  font-size:0px!important;
@@ -164,12 +164,12 @@ a[href="/spoiler"]:hover{color:white!important}/* Spoiler Setter*/
 div.over18 .entry .buttons .first{padding-left: 0px}
 .footer-parent
 {
- height:850px;
+ height:1000px;
  padding-bottom:0px;
  clear:both;
  text-align:center;
  width:100%;
- background-image:url(%%sbstare-neapolitan%%);
+ background-image:url(%%sbstare-paint%%);
  background-repeat:no-repeat;
  margin-bottom:-30px;
  background-position: 50% 100%;
@@ -330,10 +330,10 @@ a[href|="/swagintosh"],a[href|="/a24"],a[href|="/rswagintosh"],a[href|="/ra24"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%swagintosh-sheet%%)!important}
 
 a[href|="/flutterfear"],a[href|="/b00"],a[href|="/ppboring"],a[href|="/b10"],a[href|="/rarityyell"],a[href|="/b20"],a[href|="/fluttershy"],a[href|="/b30"],a[href|="/ajcower"],a[href|="/b01"],a[href|="/ajsly"],a[href|="/b11"],a[href|="/eeyup"],a[href|="/b21"],a[href|="/rdsmile"],a[href|="/b31"],a[href|="/fluttersrs"],a[href|="/b02"],a[href|="/raritydress"],a[href|="/b12"],a[href|="/takealetter"],a[href|="/b22"],a[href|="/rdwut"],a[href|="/b32"],a[href|="/ppshrug"],a[href|="/b03"],a[href|="/spikenervous"],a[href|="/newrainbowdash"],a[href|="/b13"],a[href|="/noooo"],a[href|="/b23"],a[href|="/fluttershh"],a[href|="/b04"],a[href|="/flutteryay"],a[href|="/b14"],a[href|="/squintyjack"],a[href|="/b24"],a[href|="/spikepushy"],a[href|="/b34"],a[href|="/ajugh"],a[href|="/b05"],a[href|="/raritywut"],a[href|="/b15"],a[href|="/dumbfabric"],a[href|="/b25"],a[href|="/raritywhy"],a[href|="/b35"],a[href|="/trixiesmug"],a[href|="/b06"],a[href|="/flutterwink"],a[href|="/b16"],a[href|="/rarityannoyed"],a[href|="/b26"],a[href|="/soawesome"],a[href|="/b36"],a[href|="/ajwut"],a[href|="/b07"],a[href|="/twisquint"],a[href|="/b17"],a[href|="/raritywhine"],a[href|="/b27"],a[href|="/rdcool"],a[href|="/b37"],a[href|="/abwut"],a[href|="/b08"],a[href|="/manspike"],a[href|="/b18"],a[href|="/cockatrice"],a[href|="/b28"],a[href|="/facehoof"],a[href|="/b38"],a[href|="/rarityjudge"],a[href|="/b09"],a[href|="/rarityprimp"],a[href|="/b19"],a[href|="/twirage"],a[href|="/b29"],a[href|="/ppseesyou"],a[href|="/b39"],a[href|="/pinkiedance"],a[href|="/sweetiedance"],a[href|="/dashdance"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes%%)!important}
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes-invertedtwi%%)!important}
 
 a[href|="/rflutterfear"],a[href|="/rb00"],a[href|="/rppboring"],a[href|="/rb10"],a[href|="/rrarityyell"],a[href|="/rb20"],a[href|="/rfluttershy"],a[href|="/rb30"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/rajsly"],a[href|="/rb11"],a[href|="/reeyup"],a[href|="/rb21"],a[href|="/rrdsmile"],a[href|="/rb31"],a[href|="/rfluttersrs"],a[href|="/rb02"],a[href|="/rraritydress"],a[href|="/rb12"],a[href|="/rtakealetter"],a[href|="/rb22"],a[href|="/rrdwut"],a[href|="/rb32"],a[href|="/rppshrug"],a[href|="/rb03"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/rb13"],a[href|="/rnoooo"],a[href|="/rb23"],a[href|="/rfluttershh"],a[href|="/rb04"],a[href|="/rflutteryay"],a[href|="/rb14"],a[href|="/rsquintyjack"],a[href|="/rb24"],a[href|="/rspikepushy"],a[href|="/rb34"],a[href|="/rajugh"],a[href|="/rb05"],a[href|="/rraritywut"],a[href|="/rb15"],a[href|="/rdumbfabric"],a[href|="/rb25"],a[href|="/rraritywhy"],a[href|="/rb35"],a[href|="/rtrixiesmug"],a[href|="/rb06"],a[href|="/rflutterwink"],a[href|="/rb16"],a[href|="/rrarityannoyed"],a[href|="/rb26"],a[href|="/rsoawesome"],a[href|="/rb36"],a[href|="/rajwut"],a[href|="/rb07"],a[href|="/rtwisquint"],a[href|="/rb17"],a[href|="/rraritywhine"],a[href|="/rb27"],a[href|="/rrdcool"],a[href|="/rb37"],a[href|="/rabwut"],a[href|="/rb08"],a[href|="/rmanspike"],a[href|="/rb18"],a[href|="/rcockatrice"],a[href|="/rb28"],a[href|="/rfacehoof"],a[href|="/rb38"],a[href|="/rrarityjudge"],a[href|="/rb09"],a[href|="/rrarityprimp"],a[href|="/rb19"],a[href|="/rtwirage"],a[href|="/rb29"],a[href|="/rppseesyou"],a[href|="/rb39"],a[href|="/pinkiedance"]:hover,a[href|="/sweetiedance"]:hover,a[href|="/dashdance"]:hover
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes-flipped%%)!important}
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes-flipped-invertedtwi%%)!important}
 
 a[href|="/dj"],a[href|="/threedog"],a[href|="/b33"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rb33"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%dj-plounge%%)!important}
@@ -567,7 +567,7 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 .side .md table:nth-of-type(1) th:nth-of-type(1):after {content:"a";}
 .side .md table:nth-of-type(1) tr:nth-of-type(odd) td + td:after {background-image:url(%%amotes%%);}
 .side .md table:nth-of-type(2) th:nth-of-type(1):after {content:"b";}
-.side .md table:nth-of-type(2) tr:nth-of-type(odd) td + td:after {background-image:url(%%bmotes%%);}
+.side .md table:nth-of-type(2) tr:nth-of-type(odd) td + td:after {background-image:url(%%bmotes-invertedtwi%%);}
 .side .md table:nth-of-type(3) th:nth-of-type(1):after {content:"c";}
 .side .md table:nth-of-type(3) tr:nth-of-type(odd) td + td:after {background-image:url(%%cmotes%%);}
 .side .md table:nth-of-type(4) th:nth-of-type(1):after {content:"e";}
@@ -882,3 +882,8 @@ body:lang(np):not(.subscriber) #siteTable:before{content:"You have been linked t
 body:lang(np):not(.subscriber) .entry.likes:not(.reddit-entry):before,body:lang(np):not(.subscriber) .entry.dislikes:not(.reddit-entry):before{content:"Please do not vote or comment when you come from external subreddits.";color:red;font-size:large;font-weight:700}
 body.res:lang(np):not(.subscriber) div.titlebox > div[style*='display: block !important'] input:before,body.res:lang(np):not(.subscriber) div.titlebox > div[style*='display: block !important'] label:before,body.res:lang(np):not(.subscriber) > div#keyCommandLineWidget > form:before{content:'Removed by NoParticipation'!important;margin-left:-10000px!important}
 body:lang(np):not(.subscriber) .usertext-edit,body:lang(np):not(.subscriber) .sidebox.submit,body:lang(np):not(.subscriber) .commentingAs,body:lang(np):not(.subscriber) .markdownEditor,body:lang(np):not(.subscriber) .report-button,body:lang(np):not(.subscriber) a[onclick*="return reply(this)"],body:lang(np):not(.subscriber) .subButtons,body:lang(np):not(.subscriber) .helplink,body:lang(np):not(.subscriber) .titlebox .fancy-toggle-button.toggle > .option.add,body.wiki-page:lang(np):not(.subscriber) span.pageactions a.wikiaction-edit:not(.wikiaction-current),body.wiki-page:lang(np):not(.subscriber) div.wiki-page-content form#editform label[for=reason],body.wiki-page:lang(np):not(.subscriber) div.wiki-page-content form#editform input#wiki_revision_reason,body.wiki-page:lang(np):not(.subscriber) div.wiki-page-content form#editform input[type=submit]{display:none!important}
+
+#header-img {margin-right:-50px;}
+#header span.pagename.redditname {position:relative;z-index:10;}
+
+.side a[href="http://redd.it/1bkvw7"]{ display: block; height: 78px; width: 300px; background: url(%%sbstare-banner%%); position: absolute; top: 20px; left: 400px; z-index: 999; margin: 20px 0 0 0; overflow: hidden; border-radius:10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
