--- a/source-css/mylittlesquidward.css
+++ b/source-css/mylittlesquidward.css
@@ -446,3 +446,13 @@ div.titlebox .users-online span.number:after {
     content: "SQUIDDIE MOD CRUSADERS";
     display: inline-block
     }
+
+a[href="/beeson"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 159px;
+background-image: url(%%beeson%%) !important
+}
