--- a/source-css/onetrueprincess.css
+++ b/source-css/onetrueprincess.css
@@ -561,3 +561,193 @@ Width: 150px;
 Height: 150px;
 background-image: url(%%rarityworried%%) !important
 }
+
+a[href="/shining1"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 128px;
+background-image: url(%%shining1%%) !important
+}
+
+a[href="/shiningderp"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 112px;
+background-image: url(%%shiningderp%%) !important
+}
+
+a[href="/shininghottie"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 150px;
+background-image: url(%%shininghottie%%) !important
+}
+
+a[href="/shiningheil"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 180px;
+background-image: url(%%shiningheil%%) !important
+}
+
+a[href="/shining"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 242px;
+background-image: url(%%shining%%) !important
+}
+
+a[href="/donttellmywife"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 138px;
+background-image: url(%%donttellmywife%%) !important
+}
+
+a[href="/shiningninja"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 221px;
+Height: 200px;
+background-image: url(%%shiningninja%%) !important
+}
+
+a[href="/shiningcuddle"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 99px;
+background-image: url(%%shiningcuddle%%) !important
+}
+
+a[href="/armorarmor"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 166px;
+background-image: url(%%armorarmor%%) !important
+}
+
+a[href="/shiningheythere"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 122px;
+background-image: url(%%shiningheythere%%) !important
+}
+
+a[href="/smiley"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 258px;
+background-image: url(%%smiley%%) !important
+}
+
+a[href="/shininghugs"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 118px;
+background-image: url(%%shininghugs%%) !important
+}
+
+a[href="/shining2"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 124px;
+background-image: url(%%shining2%%) !important
+}
+
+a[href="/shining2"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 124px;
+background-image: url(%%shining2%%) !important
+}
+
+a[href="/shining3"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 150px;
+background-image: url(%%shining3%%) !important
+}
+
+a[href="/shining4"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 163px;
+Height: 199px;
+background-image: url(%%shining4%%) !important
+}
+
+a[href="/werenotrelated"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 206px;
+background-image: url(%%werenotrelated%%) !important
+}
+
+a[href="/twiley"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 300px;
+Height: 300px;
+background-image: url(%%twiley%%) !important
+}
+
+a[href="/notanapple"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 225px;
+background-image: url(%%rsz-notanapple%%) !important
+}
