--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -46,14 +46,6 @@ a[href|="/fluttershythis"], a[href|="/shythis"], a[href|="/flutterthis"], a[href
     height: 500px;
     background-image: url(%%this%%)
     }
-a[href|="/twirighthug"], a[href|="/twilighthug"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 70px;
-    background-image: url(%%twirighthug%%)
-    }
 a[href|="/rollerconky"], a[href|="/skatingconky"] {
     display: block;
     clear: none;
@@ -62,46 +54,50 @@ a[href|="/rollerconky"], a[href|="/skatingconky"] {
     height: 200px;
     background-image: url(%%skatingconky%%)
     }
-a[href|="/flutterwind"], a[href|="/shywind"] {
+
+
+/* Redone Flutter emotes */
+
+a[href|="/shyhood"], a[href|="/hoodieflutter"], a[href|="/hoodieshy"], a[href|="/flutterlove"], a[href|="/shynervous"], a[href|="/flutternervous"], a[href|="/surprisedflutters"], a[href|="/surprisedflutter"], a[href|="/surprisedshy"], a[href|="/flutterwoo"], a[href|="/shywoo"], a[href|="/flutterwind"], a[href|="/shywind"] {
     display: block;
     clear: none;
     float: left;
-    width: 313px;
-    height: 150px;
-    background-image: url(%%flutterwind%%)
+    background-image: url(%%Fluttersheet-%%)
     }
-a[href|="/flutterwoo"], a[href|="/shywoo"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 263px;
-    height: 200px;
-    background-image: url(%%flutterwoo%%)
-    }
-a[href|="/surprisedflutters"], a[href|="/surprisedflutter"], a[href|="/surprisedshy"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 239px;
-    height: 250px;
-    background-image: url(%%surprisedfluttershy%%)
-    }
+
+
 a[href|="/shyhood"], a[href|="/hoodieflutter"], a[href|="/hoodieshy"] {
-    display: block;
-    clear: none;
-    float: left;
     width: 300px;
     height: 300px;
-    background-image: url(%%hoodieflutts%%)
+    background-position: -0px -0px;
+    }
+a[href|="/flutterlove"] {
+    width: 300px;
+    height: 256px;
+    background-position: -300px -0px;
     }
 a[href|="/shynervous"], a[href|="/flutternervous"] {
-    display: block;
-    clear: none;
-    float: left;
     width: 222px;
     height: 250px;
-    background-image: url(%%welp%%)
+    background-position: -600px -0px;
     }
+a[href|="/surprisedflutters"], a[href|="/surprisedflutter"], a[href|="/surprisedshy"] {
+    width: 239px;
+    height: 250px;
+    background-position: -820px -0px;
+    }
+a[href|="/flutterwoo"], a[href|="/shywoo"] {
+    width: 263px;
+    height: 200px;
+    background-position: -1059px -0px;
+    }
+a[href|="/flutterwind"], a[href|="/shywind"] {
+    width: 313px;
+    height: 150px;
+    background-position: -1322px -0px;
+    }
+
+
 a[href|="/flutterstare"] {
     display: block;
     clear: none;
@@ -126,14 +122,7 @@ a[href|="/twiflutterhappy"], a[href|="/twishyhappy"] {
     height: 200px;
     background-image: url(%%twiflutterhappy%%)
     }
-a[href|="/flutterlove"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 300px;
-    height: 256px;
-    background-image: url(%%flutterlove%%)
-    }
+
 
 /* More Flutter emotes - with a new sheet! */
 
@@ -192,7 +181,7 @@ a[href|="/flutterheart"]  {
     background-position: -1011px -0px 
     }
 /* HOLY SHEET MORE EMOTES */
-a[href|="/loveyou"], a[href|="/fluttershylovesyou"], a[href|="/loveyou"], a[href|="/fluttertine"], a[href|="/shytine"], a[href|="/rarityshynibble"], a[href|="/earnibble"], a[href|="/cuteflutter"], a[href|="/animuflutter"], a[href|="/cloudbutt"], a[href|="/flutterbutt"], a[href|="/imsorry"], a[href|="/ididntmeanit"],  a[href|="/fluttertongue"] {
+a[href|="/loveyou"], a[href|="/fluttershylovesyou"], a[href|="/loveyou"], a[href|="/fluttertine"], a[href|="/shytine"], a[href|="/rarityshynibble"], a[href|="/earnibble"], a[href|="/cuteflutter"], a[href|="/animuflutter"], a[href|="/cloudbutt"], a[href|="/flutterbutt"], a[href|="/imsorry"], a[href|="/ididntmeanit"],  a[href|="/fluttertongue"], a[href|="/flutteryou"], a[href|="/flyou"], a[href|="/supershy"], a[href|="/ohhmy"] {
 
     display: block;
     clear: none;
@@ -228,6 +217,46 @@ a[href|="/fluttertongue"] {
     width: 162px;
     background-position: -1321px -0px 
     }
+a[href|="/flutteryou"], a[href|="/flyou"] {
+    width: 202px;
+    background-position: -1483px -0px 
+    }
+a[href|="/supershy"], a[href|="/ohhmy"] {
+    width: 281px;
+    background-position: -1685px -0px 
+    }
+/* FANCY SHEET I MEAN SHEET #4 */
+
+a[href|="/dappershy"], a[href|="fancyshy"] {
+
+        display: block;
+    clear: none;
+    float: left;
+    height: 200px;
+    background-image: url(%%fluttersheet4%%) !important
+    }
+
+a[href|="/dappershy"], a[href|="fancyshy"] {
+    width: 128px;
+    background-position: -0px -0px;
+    }
+
+/* Wide Emotes */
+
+a[href|="/shysocks"], a[href|="/snugglysocks"] {
+
+    display: block;
+    clear: none;
+    float: left;
+    height: 150px;
+    background-image: url(%%WideFlutterSheet%%) !important
+    }
+
+a[href|="/shysocks"], a[href|="/snugglysocks"] {
+    width: 298px;
+    background-position: -0px -0px;
+    }
+
 /* SNUGGLES */
 a[href|="/shydashiesnuggle"], a[href|="/shydashsnuggle"], a[href|="/flutterdashsnuggle"], a[href|="/shyhuggle"], a[href|="/flutterhuggle"] {
 
@@ -281,7 +310,10 @@ a[href|="/cookieshy"], a[href|="/fluttercookie"] {
     width: 157px;
     background-position: -800px -0px 
     }
+
+
 /* Animotes - aPNG emotes! */
+
 
 a[href|="/fluttersmile"], a[href|="/shysmile"] {
     display: block;
