--- a/source-css/mlpvectors.css
+++ b/source-css/mlpvectors.css
@@ -134,16 +134,16 @@ display:inline-block;
 .flair-fireworks{ 
 background-position: 0 0; width: 20px; height: 20px; }
 .flair-illustrator{ 
-background-position: 0 - 70px; width: 20px; height: 20px; } 
+background-position: 0px - 70px; width: 20px; height: 20px; } 
 .flair-inkscape{ 
-background-position: 0 -140px; width: 20px; height: 20px; } 
+background-position: 0px - 140px; width: 20px; height: 20px; } 
 .flair-photoshop{
- background-position: 0 - 210px; width: 20px; height: 20px; }
+ background-position: 0px - 210px; width: 20px; height: 20px; }
 .flair-pscape{
 background: url(%%pscape2%%);
 background-position: 0 - 0px; width: 20px; height: 20px;}
 .flair-pscapetest{
-background: url(%%pflair3%%);
+background: url(%%paintflair%%);
 background-position: 0 - 0px; width: 20px; height: 20px;}
 
 /* The forbidden Master flair */
