--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -2,19 +2,20 @@
 
 /* Changes background  */
 body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%horselandbg%%)  no-repeat  fixed 60% 95% !important;
+    background:  url(%%bubble%%)  no-repeat  fixed 70% 85% !important;
 }
 
 /* Banner image and associated height values */
 #header-bottom-left:nth-of-type(n) {
-   background: url(%%fuckyoucheese2%%);
+   background: url(%%fuckyoucheese%%);
    background-repeat: no-repeat;
    background-position: 50% 100%;
    height: 237px; /* 237 for meat's nice banner and general banner size */
 }
 
 #header-img-a {
-    margin-top: 120px;
+    margin-top: 13px;
+    margin-left: 15px;
 }
 
 #header, #header.res-nightmode{
@@ -407,6 +408,7 @@ background-repeat: no-repeat;
 .flair-zovistograt2:after { background-position: 0px -4410px }
 .flair-Berrytube:after { background-position: 0px -4440px }
 .flair-maku450:after { background-position: 0px -4470px }
+.flair-pwny:after { background-position: 0px -4500px }
 
 /* Nightmode fix for flair */
 body.res-nightmode:first-of-type .flair { background-color: transparent!important; }
@@ -867,6 +869,8 @@ a[href='/sp'] { display: inline-block; padding-right: 100%; }
 
 
 /* Replacing somebody's name? Add it to the list here. */
+a.author[href$="numberlock"],
+a.author[href$="thedarklordkyp"],
 a.author[href$="fwinest_JediThug"],
 a.author[href$="V17Ds"],
 a.author[href$="Rudicorn"],
@@ -957,6 +961,8 @@ content: "";
 }
 
 /* Replacing somebody's name? Add it to the list here too. */
+a.author[href$="numberlock"]:before,
+a.author[href$="thedarklordkyp"]:before,
 a.author[href$="fwinest_JediThug"]:before,
 a.author[href$="V17Ds"]:before,
 a.author[href$="Rudicorn"]:before,
@@ -1048,6 +1054,8 @@ visibility:visible!important;
 /*a.author:before{
     content:"Princess "
     }*/
+a.author[href$="numberlock"]:before {content:"BeerPony"}
+a.author[href$="thedarklordkyp"]:before {content:"A_Drunk_Changeling"}
 a.author[href$="fwinest_JediThug"]:before {content:"Wincest_JediThug"}
 a.author[href$="V17Ds"]:before {content:"SwiftV17Ds"}
 a.author[href$="Rudicorn"]:before {content:"Grumpledick"}
@@ -1146,6 +1154,7 @@ height:30px
 
 /* Adding after-text to somebody's name? Add them here. */
 a.author[href$="DrinkiePie"]:after,
+a.author[href$="thedarklordkyp"]:after,
 a.author[href$="XelNaga"]:after,
 a.author[href$="cecinestpasunepony"]:after,
 a.author[href$="AttainedAndDestroyed"]:after,
@@ -1210,6 +1219,7 @@ letter-spacing:normal;
 
 /* After-name text goes here. */
 a.author[href$="DrinkiePie"]:after {content:" Never got text flair :("}
+a.author[href$="thedarklordkyp"]:after {content:" http://i.imm.io/11QxU.jpeg"}
 a.author[href$="XelNaga"]:after {content:" (Is totally internet famous)"}
 a.author[href$="cecinestpasunepony"]:after { content:" writes shitty mlas1 erotic fanfiction"}
 a.author[href$="AttainedAndDestroyed"]:after { content:" saggy tits are swaggy tits"}
@@ -1269,6 +1279,7 @@ a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
 
 
 /* Any pre/post-name flair stuff goes here */ 
+.tagline a.author[href$="/Udent_Gnome"]:before,
 .tagline a.author[href$="/Indubitableness"]:before,
 .tagline a.author[href$="/RainbowCrash"]:before,
 .tagline a.author[href$="/245001"]:before,
@@ -1294,6 +1305,7 @@ a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
 
 /* Flour sack flair for anyone we've noticed that has flair disabled. Don't forget to add them above too.*/ 
 .tagline a.author[href$="/Indubitableness"]:before,
+.tagline a.author[href$="/Udent_Gnome"]:before,
 .tagline a.author[href$="/EvanMacIan"]:before,
 .tagline a.author[href$="/RainbowCrash"]:before,
 .tagline a.author[href$="/Latiel"]:before,
