Stylesheet/emote/tag updates 2013-04-08

--- a/source-css/beautybrass.css
+++ b/source-css/beautybrass.css
@@ -102,3 +102,13 @@ a[href|="/geometry"]
     width: 133px;
     height: 170px;
 }
+a[href|="/kentheart"]
+{
+ 
+ background-image: url(%%vlIiQah%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    width: 164px;
+    height: 266px;
+}
