--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -503,6 +503,18 @@ background-image: url(%%pinke-v2%%);
 }
 a[href|='/pinke'] {background-position: 0px 0px}
 
+a[href|="/lpseductive"]
+{
+display: block;
+clear: none;
+float: left;
+width: 100px;
+height: 100px;
+background-repeat: no-repeat;
+background-image: url(%%lpseductive%%);
+}
+a[href|='/lpseductive'] {background-position: 0px 0px}
+
 
 /* Flair */
 
