--- a/source-css/gallopfrey.css
+++ b/source-css/gallopfrey.css
@@ -747,7 +747,7 @@ a[href|="/dr05"], a[href|="/amy"],
 a[href|="/dr15"], a[href|="/rory"],
 a[href|="/dr25"], a[href|="/river"],
 a[href|="/dr06"], a[href|="/sjs"], a[href|="/sarahjane"], a[href|="/sarahjanesmith"],
-a[href|="/dr16"], a[href|="/romanaII"], a[href|="/romana2"]
+a[href|="/dr16"], a[href|="/romanaII"], a[href|="/romana2"], a[href|="/romana"],
 a[href|="/dr26"], a[href|="/dwfacehoof"], a[href|="/martha"]
 {
     display: block;
@@ -776,7 +776,7 @@ a[href|="/rdr05"], a[href|="/ramy"],
 a[href|="/rdr15"], a[href|="/rrory"],
 a[href|="/rdr25"], a[href|="/rriver"],
 a[href|="/rdr06"], a[href|="/rsjs"], a[href|="/rsarahjane"], a[href|="/rsarahjanesmith"],
-a[href|="/rdr16"], a[href|="/rromanaII"], a[href|="/rromana2"]
+a[href|="/rdr16"], a[href|="/rromanaII"], a[href|="/rromana2"], a[href|="/rromana"],
 a[href|="/rdr26"],  a[href|="/rmartha"]
 {
     display: block;
