--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -516,6 +516,15 @@ a[href|="/twispecial"] {
     background-image: url(%%twieyes%%)
     }
 
+a[href|="/flittergasp"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 193px;
+    height: 200px;
+    background-image: url(%%flittergasp%%)
+    }
+
 a[href|="/rosesax"] {
     display: block;
     clear: none;
@@ -606,8 +615,8 @@ a[href|="/unhug"] {
     display: block;
     clear: none;
     float: left;
-    width: 200px;
-    height: 135px;
+    width: 298px;
+    height: 200px;
     background-image: url(%%unhug%%) !important
     }
 
@@ -705,6 +714,15 @@ a[href|="/rosetits"] {
     background-position: 0px -160px
     }
 
+a[href|="/ajhaybale"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 175px;
+    height: 175px;
+    background-image: url(%%Imgmap%%) !important;
+    background-position: -175px -160px
+    }
 
 /* ------MACROS------- */
 a[href="/scumbagrando"] {
