--- a/source-css/mylittlemango.css
+++ b/source-css/mylittlemango.css
@@ -382,7 +382,7 @@ a[href|="/chryssixtia"] { background-position: -0px -194px; width: 200px; height
 a[href|="/ohshitbby"] { background-position: -200px -194px; width: 100px; height: 100px; }
 a[href|="/twinotamused"] { background-position: -0px -361px; width: 127px; height: 99px; }
 
-a[href|="/queenohshit"], a[href|="/queenofthehookah"], a[href|="/thekommandant"], a[href|="/mangosyrup"] {
+a[href|="/queenohshit"], a[href|="/queenofthehookah"], a[href|="/thekommandant"], a[href|="/mangosyrup"], a[href|="/captainawesome"], a[href|="/jakoman"], a[href|="/maximumoverbite"] {
      display: block;
      clear: none;
      float: left;
@@ -393,3 +393,6 @@ a[href|="/queenohshit"] { background-position: -0px -0px; width: 401px; height: 
 a[href|="/queenofthehookah"] { background-position: -0px -479px; width: 240px; height: 250px; }
 a[href|="/thekommandant"] { background-position: -0px -729px; width: 200px; height: 147px; }
 a[href|="/mangosyrup"] { background-position: -200px -729px; width: 200px; height: 109px; }
+a[href|="/captainawesome"] { background-position: -0px -876px; width: 111px; height: 119px; }
+a[href|="/jakoman"] { background-position: -111px -876px; width: 117px; height: 106px; }
+a[href|="/maximumoverbite"] { background-position: -228px -876px; width: 150px; height: 101px; }
