--- a/source-css/ploungemafia.css
+++ b/source-css/ploungemafia.css
@@ -636,3 +636,12 @@ background-position: -100px -600px;
 .usertext input[value$="9"] + .usertext-body a[href="/shy"] { 
 background-position: -200px -600px; 
   }
+
+/* Boring box bigger thing */
+
+.fancy-settings textarea {
+    height: 300px
+    }
+.stylesheet-customize-container textarea {
+    height: 500px
+    }
