--- a/source-css/seriouslyluna.css
+++ b/source-css/seriouslyluna.css
@@ -783,6 +783,14 @@ a[href|="/futasy"] {
     height: 200px;
     background-image:url(%%cc04%%)
 }
+a[href|="/seriouslybudding"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 303px;
+    height: 264px;
+    background-image:url(%%seriouslybudding%%)
+}
 a[href|="/seriouslydressedup"] {
  display: block;
  clear: none;
