--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -161,8 +161,8 @@ a[href|="/sp"] + .reddit_show_hidden_emotes_span{display:none}
 
 a[href^="/"][href*="-in-"],a[href^="/"][href$="-in"],a[href^="/"][href*="-inp-"],a[href^="/"][href$="-inp"]{float:none!important;display: inline-block!important}
 
-a[href="/spoiler"]{background:black!important;color:black!important}
-a[href="/spoiler"]:hover{color:white!important}/*Pinkie Pie NPT Warnings*//*DO _NOT_ PUT ANY COMMENTS IN-BETWEEN THE NPTWARNING TAGS! Do not remove the tags either, they are used by modtool and the bot! The tags must be on their own line!*/
+body a[href="/spoiler"]{background:black!important;color:black!important}
+body a[href="/spoiler"]:hover{color:white!important}/*Pinkie Pie NPT Warnings*//*DO _NOT_ PUT ANY COMMENTS IN-BETWEEN THE NPTWARNING TAGS! Do not remove the tags either, they are used by modtool and the bot! The tags must be on their own line!*/
 /*{NPTWARNING}
 .formtabs-content .infobar
 {
