--- a/source-css/themirishponies.css
+++ b/source-css/themirishponies.css
@@ -947,7 +947,7 @@ Clear: none;
 Float: left;
 Width: 150px;
 Height: 150px;
-background-image: url(%%lyrastpaddys%%) !important
+background-image: url(%%lyrastpaddys%%)
 }
 
 a[href="/shamrock"] {
@@ -957,7 +957,7 @@ Clear: none;
 Float: left;
 Width: 150px;
 Height: 150px;
-background-image: url(%%shamrock%%) !important
+background-image: url(%%shamrock%%)
 }
 
 a[href="/shamrockbox"] {
@@ -967,7 +967,7 @@ Clear: none;
 Float: left;
 Width: 300px;
 Height: 150px;
-background-image: url(%%shamrockbox%%) !important
+background-image: url(%%shamrockbox%%)
 }
 
 a[href="/shamrocklike"] {
@@ -977,7 +977,7 @@ Clear: none;
 Float: left;
 Width: 150px;
 Height: 124px;
-background-image: url(%%shamrocklike%%) !important
+background-image: url(%%shamrocklike%%)
 }
 
 a[href="/shamrockpc"] {
@@ -987,7 +987,7 @@ Clear: none;
 Float: left;
 Width: 150px;
 Height: 182px;
-background-image: url(%%shamrockpc%%) !important
+background-image: url(%%shamrockpc%%)
 }
 
 a[href="/shamrockpoker"] {
@@ -997,7 +997,7 @@ Clear: none;
 Float: left;
 Width: 150px;
 Height: 120px;
-background-image: url(%%shamrockpoker%%) !important
+background-image: url(%%shamrockpoker%%)
 }
 
 a[href="/shamrockrealise"] {
@@ -1007,7 +1007,7 @@ Clear: none;
 Float: left;
 Width: 150px;
 Height: 150px;
-background-image: url(%%shamrockrealise%%) !important
+background-image: url(%%shamrockrealise%%)
 }
 
 a[href="/stpinkie"] {
@@ -1017,7 +1017,7 @@ Clear: none;
 Float: left;
 Width: 150px;
 Height: 205px;
-background-image: url(%%stpinkie%%) !important
+background-image: url(%%stpinkie%%)
 }
 
 a[href="/tiajuice"] {
@@ -1027,7 +1027,7 @@ Clear: none;
 Float: left;
 Width: 150px;
 Height: 179px;
-background-image: url(%%tiajuice%%) !important
+background-image: url(%%tiajuice%%)
 }
 
 a[href="/adority"] {
@@ -1037,97 +1037,97 @@ Clear: none;
 Float: left;
 Width: 185px;
 Height: 150px;
-background-image: url(%%adority%%) !important
+background-image: url(%%adority%%)
 }
 
-a[href="/ajairbrush"] {
+a[href="/ajab"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
 Width: 150px;
 Height: 150px;
-background-image: url(%%ajairbrush%%) !important
+background-image: url(%%ajab%%)
 }
 
-a[href="/nmmairbrush"] {
+a[href="/nmmab"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
 Width: 150px;
 Height: 150px;
-background-image: url(%%nmmairbrush%%) !important
+background-image: url(%%nmmab%%)
 }
 
-a[href="/pinkieairbrush"] {
+a[href="/pinkieab"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
 Width: 150px;
 Height: 150px;
-background-image: url(%%pinkieairbrush%%) !important
+background-image: url(%%pinkieab%%)
 }
 
-a[href="/rarityairbrush"] {
+a[href="/rarityab"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
 Width: 150px;
 Height: 150px;
-background-image: url(%%rarityairbrush%%) !important
+background-image: url(%%rarityab%%)
 }
 
-a[href="/rbdairbrush"] {
+a[href="/rbdab"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
 Width: 150px;
 Height: 150px;
-background-image: url(%%rbdairbrush%%) !important
+background-image: url(%%rbdab%%)
 }
 
-a[href="/spikeairbrush"] {
+a[href="/spikeab"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
 Width: 150px;
 Height: 150px;
-background-image: url(%%spikeairbrush%%) !important
+background-image: url(%%spikeab%%)
 }
 
-a[href="/twiairbrush"] {
+a[href="/twiab"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
 Width: 150px;
 Height: 150px;
-background-image: url(%%twiairbrush%%) !important
+background-image: url(%%twiab%%)
 }
 
-a[href="/flutterairbrush"] {
+a[href="/flutterab"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
 Width: 150px;
 Height: 150px;
-background-image: url(%%flutterairbrush%%) !important
+background-image: url(%%flutterab%%)
 }
 
-a[href="/tiaairbrush"] {
+a[href="/tiaab"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
 Width: 150px;
 Height: 150px;
-background-image: url(%%tiaairbrush%%) !important
+background-image: url(%%tiaab%%)
 }
 
 a[href="/nmmnova"] {
@@ -1137,7 +1137,7 @@ Clear: none;
 Float: left;
 Width: 150px;
 Height: 205px;
-background-image: url(%%nmmnova%%) !important
+background-image: url(%%nmmnova%%)
 }
 
 a[href="/twicontemplate"] {
@@ -1147,7 +1147,7 @@ Clear: none;
 Float: left;
 Width: 150px;
 Height: 151px;
-background-image: url(%%twicontemplate%%) !important
+background-image: url(%%twicontemplate%%)
 }
 
 a[href="/queenfaust"] {
@@ -1157,7 +1157,67 @@ Clear: none;
 Float: left;
 Width: 150px;
 Height: 216px;
-background-image: url(%%queenfaust%%) !important
+background-image: url(%%queenfaust%%)
+}
+
+a[href|="/rdup"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 150px;
+height: 140px;
+background-image: url(%%rdup%%)
+}
+
+a[href|="/lyraswagger"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 150px;
+height: 204px;
+background-image: url(%%lyraswagger%%)
+}
+
+a[href|="/twihappydance"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 147px;
+height: 150px;
+background-image: url(%%twihappydance%%)
+}
+
+a[href|="/sombrachargin"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 140px;
+height: 140px;
+background-image: url(%%sombrachargin%%)
+}
+
+a[href|="/impluna"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 127px;
+height: 150px;
+background-image: url(%%impluna%%)
+}
+
+a[href|="/lunasocks"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 150px;
+height: 167px;
+background-image: url(%%lunasocks%%)
 }
 
 /* ==Boxed reddit CSS Theme v1.1.3 - (http://www.reddit.com/r/boxed/)== */
