--- a/addon/bpmotes.css
+++ b/addon/bpmotes.css
@@ -338,6 +338,32 @@
     -webkit-filter: invert(100%);
 }
 
+/* Some basic flags extracted from extracss, since they're nice to have generally */
+.bpflag-r.bpflag-d:hover {
+    transform:         none;
+    -moz-transform:    none;
+    -webkit-transform: none;
+    -o-transform:      none;
+}
+.bpflag-r, .bpflag-d:hover {
+    transform:         scaleX(-1);
+    -moz-transform:    scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    -o-transform:      scaleX(-1);
+}
+.bpflag-f, .bpflag-r.bpflag-f.bpflag-d:hover {
+    transform:         scaleY(-1);
+    -moz-transform:    scaleY(-1);
+    -webkit-transform: scaleY(-1);
+    -o-transform:      scaleY(-1);
+}
+.bpflag-r.bpflag-f, .bpflag-f.bpflag-d:hover {
+    transform:         scaleX(-1) scaleY(-1);
+    -moz-transform:    scaleX(-1) scaleY(-1);
+    -webkit-transform: scaleX(-1) scaleY(-1);
+    -o-transform:      scaleX(-1) scaleY(-1);
+}
+
 /* BPM doesn't have any idea what to do with this kind of selector */
 .bpm-emote.bpmote-spoiler {
     color: black !important;
